--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ script:
   - gem install norminette --pre
   - gem install --user-install json -v 1.8.3
   - sh norminette/check_norme.sh srcs includes
+email:
+  on_success: never
+  on_failure: never
